Update server to drop ap map_id and include more reading attrs.
